--- a/css30MustR.css
+++ b/css30MustR.css
@@ -195,3 +195,36 @@ ul:first-of-type > li:nth-child(2) {
 p + ul li:last-child {
 font-weight: bold;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.sub-title-area {width:1080px;height:100%;margin:0 auto;padding-top:58px;text-align:left; z-index:1; position:relative;}
+
+.sub-visual.visual00_04 {background-color:#e94641;}
+.sub-visual.visual00_04 .sub-title-area:after {
+	content: "";
+	display: block;
+	background-color:#e94641;
+	background:url("/common/img/contents/visual00_04_i.png") no-repeat;
+	background-position: right bottom;
+	background-size: 40%;
+    width: 100%;
+    height:100%;
+    position:absolute;
+    top:0;
+    right:0;
+    z-index:-1;
+}
