--- a/101_elle/2-4(shopping)/style.css
+++ b/101_elle/2-4(shopping)/style.css
@@ -10,6 +10,7 @@ button{
     outline: none;
     background-color: transparent;
     border:none;
+    cursor: pointer;
 }
 
 body{
@@ -56,10 +57,10 @@ body{
 
 .item__delete{
     font-size:16px;
-    transition:all 300s ease-in;
+    transition:all 300ms ease-in
 }
 
-.item__delete{
+.item__delete:hover{
     color:red;
     transform:scale(1.1);
 }
@@ -84,4 +85,27 @@ body{
     );
     border-radius:  0 0 20px 20px;
     color:white;
+}
+
+.footer__input{
+    width: 100%;
+    height: 32px;
+    border:none;
+    outline:none;
+    font-size: 24px;
+    padding:0 16px;
+}
+
+.footer__button{
+    width: 48px;
+    height:48px;
+    font-size: 28px;
+    background-color: black;
+    border-radius: 50%;
+    color:white;
+    transition: transform 300ms ease-in;
+}
+
+.footer__button:hover{
+    transform: scale(1.1);
 }
