--- a/101_elle/4-0/carrot/style.css
+++ b/101_elle/4-0/carrot/style.css
@@ -3,11 +3,16 @@ button{
     outline:none;
     cursor: pointer;
 }
+
+body{
+    text-align: center;
+}
 .game{
     display:flex;
     flex-direction: column;
     width:800px;
     height:500px;
+    margin:auto;
     background:url(img/background.png) center/cover; 
 }
 
@@ -23,6 +28,30 @@ button{
 .game__button:hover{
     transform:scale(1.1)
 }
+
+.game__timer{
+    width:100px;
+    background-color: white;
+    text-align:center;
+    border: 5px solid black;
+    border-radius: 20px;
+    font-size: 32px;
+    margin-top:8px;
+}
+
+.game__score{
+    text-align: center;
+    width:50px;
+    height:50px;
+    font-size:46px;
+    border-radius: 50%;
+    background-color: darksalmon;
+    color:white;
+    margin-top:8px;
+    border: 3px solid black;
+}
+
+
 .game__header{
     display:flex;
     flex-direction: column;
@@ -33,5 +62,36 @@ button{
 .game__field{
     width:100%;
     height:100%;
-    background-color: blue;
+    margin-top:40px;
+    opacity:0.4;
+}
+
+.pop-up{
+    width: 400px;
+    height: 140px;
+    margin:auto;
+    padding:20px;
+    background-color: #00000090;
+    border-radius: 20px;
+    color: white;
+    text-align: center;
+    transform: translateY(-150%);
+}
+
+.pop-up--hide{
+    display: none;
+}
+
+.pop-up__refresh{
+    width:60px;
+    height:60px;
+    font-size: 24px;
+    background-color: wheat;
+    border:2px solid black;
+    border-radius: 50%;
+}
+
+.pop-up__message{
+    display: block;
+    font-size: 38px;
 }
