--- a/101_elle/4-0/carrot/style.css
+++ b/101_elle/4-0/carrot/style.css
@@ -37,6 +37,7 @@ body{
     border-radius: 20px;
     font-size: 32px;
     margin-top:8px;
+    visibility: hidden;
 }
 
 .game__score{
@@ -49,6 +50,7 @@ body{
     color:white;
     margin-top:8px;
     border: 3px solid black;
+    visibility: hidden;
 }
 
 
