elle's end up fixed

--- a/101_elle/4-0/carrot/style.css
+++ b/101_elle/4-0/carrot/style.css
@@ -6,6 +6,7 @@ button{
 
 body{
     text-align: center;
+    background-color: black;
 }
 .game{
     display:flex;
@@ -38,19 +39,24 @@ body{
     font-size: 32px;
     margin-top:8px;
     visibility: hidden;
+    user-select: none;
+    cursor: auto;
 }
 
 .game__score{
     text-align: center;
     width:50px;
     height:50px;
-    font-size:46px;
+    line-height: 50px;
+    font-size:38px;
     border-radius: 50%;
     background-color: darksalmon;
     color:white;
     margin-top:8px;
     border: 3px solid black;
     visibility: hidden;
+    user-select: none;
+    cursor: auto;
 }
 
 
@@ -96,4 +102,13 @@ body{
 .pop-up__message{
     display: block;
     font-size: 38px;
+}
+
+.carrot,.bug{
+    transition: transform 100ms ease-in;
+}
+
+.carrot:hover,
+.bug:hover{
+    transform: scale(1.1);
 }
